apps/base/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-ui
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: unifi
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-udp
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
  annotations:
spec:
  type: LoadBalancer
  ports:
  - port: 3478
    targetPort: 3478
    protocol: UDP
    name: stun
  selector:
    app.kubernetes.io/name: unifi
