apps/base/unifi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`unifi.cruznet.io`)
    kind: Rule
    services:
    - name: unifi
      kind: Service
      port: 8080
  tls:
    secretName: unifi-cert
